// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image Debe mostrar el componente correctamente con imagen personalizada 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="imagen.jpg"
/>
`;

exports[`Product Image Debe mostrar el componente correctamente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Product Image Debe mostrar el componente correctamente con la imagen del producto 2 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Product Image Debe mostrar el componente correctamente con la imagen personalizada 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="imagen.jpg"
/>
`;
